<resources>
    <string name="app_name">StarWarsApp1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_person">Select person</string>
    <string name="hint">hint</string>
    <string name="people">People</string>
    <string name="films">Films</string>
    <string name="transport">Transport</string>
    <string name="count">Count</string>
    <string name="todo">TODO</string>
    <string name="male">Male</string>
    <string name="tab_1">Tab 1</string>
    <string name="tab_2">Tab 2</string>
</resources>